[gd_scene load_steps=8 format=3 uid="uid://crvo564wxm88r"]

[ext_resource type="Texture2D" uid="uid://dcu7n1wjcaeuw" path="res://Assets/Graphics/barBacrgroundAndThings.jpg" id="1_28flt"]
[ext_resource type="Script" uid="uid://cdsowjw0mn2it" path="res://Scripts/main_menu.gd" id="1_48xlc"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_48xlc"]
texture = ExtResource("1_28flt")
modulate_color = Color(0.497474, 0.497474, 0.497474, 1)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_erv1k"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_erv1k"]
bg_color = Color(0.75, 0, 0.15, 1)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16
shadow_size = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_48xlc"]
bg_color = Color(0.4, 0, 0.1, 1)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16
shadow_size = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_28flt"]
bg_color = Color(0.551402, 0, 0.159367, 1)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16
shadow_size = 5

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_48xlc")

[node name="Panel" type="Panel" parent="."]
show_behind_parent = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_48xlc")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -121.0
offset_top = -46.0
offset_right = 121.0
offset_bottom = 205.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 20

[node name="Play" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_font_sizes/font_size = 34
theme_override_styles/focus = SubResource("StyleBoxEmpty_erv1k")
theme_override_styles/hover = SubResource("StyleBoxFlat_erv1k")
theme_override_styles/pressed = SubResource("StyleBoxFlat_48xlc")
theme_override_styles/normal = SubResource("StyleBoxFlat_28flt")
text = "Играть"

[node name="Tutorial" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_font_sizes/font_size = 34
theme_override_styles/focus = SubResource("StyleBoxEmpty_erv1k")
theme_override_styles/hover = SubResource("StyleBoxFlat_erv1k")
theme_override_styles/pressed = SubResource("StyleBoxFlat_48xlc")
theme_override_styles/normal = SubResource("StyleBoxFlat_28flt")
text = "Обучение"

[node name="Exit" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_font_sizes/font_size = 34
theme_override_styles/focus = SubResource("StyleBoxEmpty_erv1k")
theme_override_styles/hover = SubResource("StyleBoxFlat_erv1k")
theme_override_styles/pressed = SubResource("StyleBoxFlat_48xlc")
theme_override_styles/normal = SubResource("StyleBoxFlat_28flt")
text = "Выход"

[node name="GameName" type="Label" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -270.5
offset_top = 78.0
offset_right = 270.5
offset_bottom = 174.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 50
text = "Название игры"
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="pressed" from="VBoxContainer/Play" to="." method="_on_play_pressed"]
[connection signal="pressed" from="VBoxContainer/Tutorial" to="." method="_on_tutorial_pressed"]
[connection signal="pressed" from="VBoxContainer/Exit" to="." method="_on_exit_pressed"]
